# PERIGEE

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  a.cpp
conf/: BSCC-T6.cmake  NC-E.cmake  (+58 more)
examples/ALE_ns_rotate/: CMakeLists.txt  ns_driver.cpp  prepost_ns.cpp  preprocess.cpp  preprocess_ns.cpp  vis_601_p1_wss.cpp  vis_hex27_wss.cpp  vis_ns.cpp  vis_p2_wss.cpp  vis_wss_hex27.cpp  vis_wss_hex8.cpp  vis_wss_tet10.cpp  vis_wss_tet4.cpp
examples/ALE_ns_rotate/include/: Matrix_Free_Tools.hpp  PDNSolution_NS.hpp  PDNSolution_V.hpp  PGAssem_2x2Block_NS_FEM.hpp  PGAssem_NS_FEM.hpp  PLocAssem_VMS_NS_GenAlpha.hpp  PLocAssem_VMS_NS_GenAlpha_Interface.hpp  PLocAssem_VMS_NS_GenAlpha_WeakBC.hpp  PNonlinear_NS_Solver.hpp  PTime_NS_Solver.hpp  VTK_Writer_NS.hpp  VisDataPrep_NS.hpp
examples/ALE_ns_rotate/input/: ns_prepost.yml  ns_preprocess.yml
examples/ALE_ns_rotate/src/: PGAssem_NS_FEM.cpp  PLocAssem_VMS_NS_GenAlpha.cpp  PLocAssem_VMS_NS_GenAlpha_Interface.cpp  PLocAssem_VMS_NS_GenAlpha_WeakBC.cpp  PNonlinear_NS_Solver.cpp  PTime_NS_Solver.cpp  VTK_Writer_NS.cpp  VisDataPrep_NS.cpp
examples/electrophysiology_2d/: CMakeLists.txt  preprocess2d_main.cpp
examples/fsi/: CMakeLists.txt  driver.cpp  fsi_driver.cpp  fsi_driver_tissue.cpp  prepost.cpp  preprocess.cpp  preprocess_fsi.cpp  vis.cpp  vis_501_fsi_wss.cpp  vis_601_fsi_wss.cpp  vis_driver.cpp  vis_fluid.cpp  vis_fsi_wss.cpp  vis_fsi_wss_hex8.cpp  vis_fsi_wss_tet4.cpp  vis_hex8_fsi_wss.cpp  vis_solid.cpp  vis_tet4_fsi_wss.cpp  wall_ps_driver.cpp  wall_ps_tet4_driver.cpp
examples/fsi/include/: NodalBC_3D_FSI.hpp  PDNSolution_P.hpp  PDNSolution_V.hpp  PGAssem_FSI.hpp  PGAssem_Mesh.hpp  PGAssem_Wall_Prestress.hpp  PLocAssem_2x2Block_ALE_VMS_NS_GenAlpha.hpp  PLocAssem_2x2Block_Tet4_ALE_VMS_NS_GenAlpha.hpp  PLocAssem_2x2Block_Tet4_VMS_Hyperelasticity.hpp  PLocAssem_2x2Block_Tet4_VMS_Incompressible.hpp  PLocAssem_2x2Block_VMS_Degradation.hpp  PLocAssem_2x2Block_VMS_Hyperelasticity.hpp  PLocAssem_2x2Block_VMS_Incompressible.hpp  PLocAssem_FSI_Mesh_Elastostatic.hpp  PLocAssem_FSI_Mesh_Laplacian.hpp  PLocAssem_Tet4_FSI_Mesh_Laplacian.hpp  PNonlinear_FSI_Solver.hpp  PTime_FSI_Solver.hpp  VTK_Writer_FSI.hpp  VTK_Writer_FSI_Tet4.hpp  VisDataPrep_ALE_NS.hpp  VisDataPrep_FSI.hpp  VisDataPrep_Hyperelastic.hpp
examples/fsi/input/: fsi_prepost.yml  fsi_preprocess.yml
examples/fsi/src/: NodalBC_3D_FSI.cpp  PDNSolution_P.cpp  PDNSolution_V.cpp  PGAssem_FSI.cpp  PGAssem_Mesh.cpp  PGAssem_Wall_Prestress.cpp  PLocAssem_2x2Block_ALE_VMS_NS_GenAlpha.cpp  PLocAssem_2x2Block_Tet4_ALE_VMS_NS_GenAlpha.cpp  PLocAssem_2x2Block_Tet4_VMS_Hyperelasticity.cpp  PLocAssem_2x2Block_Tet4_VMS_Incompressible.cpp  PLocAssem_2x2Block_VMS_Degradation.cpp  PLocAssem_2x2Block_VMS_Hyperelasticity.cpp  PLocAssem_2x2Block_VMS_Incompressible.cpp  PLocAssem_FSI_Mesh_Elastostatic.cpp  PLocAssem_FSI_Mesh_Laplacian.cpp  PLocAssem_Tet4_FSI_Mesh_Elastostatic.cpp  PLocAssem_Tet4_FSI_Mesh_Laplacian.cpp  PNonlinear_FSI_Solver.cpp  PTime_FSI_Solver.cpp  VTK_Writer_FSI.cpp  VTK_Writer_FSI_Tet4.cpp  VisDataPrep_ALE_NS.cpp  VisDataPrep_FSI.cpp  VisDataPrep_Hyperelastic.cpp
examples/legacy_tet4_ns_3d/: CMakeLists.txt  gmsh_process.cpp  ns_analysis.cpp  post_compare_manu.cpp  prepost_tets.cpp  preprocess_sv_tets.cpp  preprocess_tets.cpp
examples/legacy_tet4_ns_3d/include/: PDNSolution_Tet4_NS_3D.hpp  PGAssem_SV_NS_FEM.hpp  VTK_Writer_NS_3D.hpp  VisDataPrep_NS_3D.hpp
examples/legacy_tet4_ns_3d/src/: PDNSolution_Tet4_NS_3D.cpp  PGAssem_SV_NS_FEM.cpp  PNonlinear_Tet4_NS_3D_Solver.cpp  VisDataPrep_NS_3D.cpp
examples/linearPDE/elastodynamics/: CMakeLists.txt  driver.cpp  driver_elastodynamics.cpp  post_compare_manu.cpp  vis.cpp  vis_elastodynamics.cpp
examples/nonlinear_heat_eqn/: CMakeLists.txt  Pre_postprocess2d.cpp  Pre_postprocess3d.cpp  post_compare_manu_2d.cpp  post_compare_manu_3d.cpp  preprocess2d_main.cpp  preprocess3d_main.cpp  vis_2DNLHeat.cpp  vis_3DNLHeat.cpp
examples/nonlinear_heat_eqn/include/: Post_error.hpp
examples/nonlinear_heat_eqn/src/: VisDataPrep_3DNLHeat.cpp
examples/ruc_fsi/: CMakeLists.txt  README.md  prepost_tets.cpp  preprocess_tets.cpp  ruc_driver.cpp  test_membrane_element_routine.cpp  vis_p1_wss.cpp  vis_p2_wss.cpp  vis_ruc.cpp  wall_solver.cpp
examples/ruc_fsi/include/: Matrix_PETSc_CMM.hpp  PDNSolution_NS.hpp  PGAssem_Tet_CMM_GenAlpha.hpp  PLocAssem_Tet_CMM_GenAlpha.hpp  PLocAssem_Tet_Wall_Prestress.hpp  VTK_Writer_CMM.hpp  VisDataPrep_CMM.hpp
examples/ruc_fsi/src/: Matrix_PETSc_CMM.cpp  NodalBC_3D_CMM.cpp  PDNSolution_NS.cpp  PDNSolution_Wall_Disp.cpp  PGAssem_Tet_CMM_GenAlpha.cpp  PGAssem_Tet_Wall.cpp  PLocAssem_Tet_CMM_GenAlpha.cpp  PLocAssem_Tet_Wall_Prestress.cpp  PNonlinear_CMM_Solver.cpp  PTime_CMM_Solver.cpp  VTK_Writer_CMM.cpp  VisDataPrep_CMM.cpp
examples/solids/: CMakeLists.txt  driver.cpp  prepost.cpp  preprocess.cpp  vis.cpp  vis_solid.cpp
examples/test/: CMakeLists.txt  elem_improvement_test.cpp  elem_test.cpp  fsi_cylinder_hex_p1_wBL_test.geo  fsi_cylinder_hex_p1_wBL_test.msh  fsi_cylinder_hex_p2_wBL_test.geo  fsi_cylinder_hex_p2_wBL_test.msh  gmsh_test.cpp  gmsh_test2.cpp  h5_test.cpp  mathtools_test.cpp  matmodel_test.cpp  read_direction_vec_test.cpp  sys_test.cpp  sys_test2.cpp  tool_test.cpp
examples/tet_ns_3d/: CMakeLists.txt  gmsh_line_process.cpp  gmsh_linear_process.cpp  gmsh_process.cpp  gmsh_quad_process.cpp  gmsh_quadratic_process.cpp  gmsh_square_cylinder_p1.cpp  ns_tet_driver.cpp  prepost_ns_tets.cpp  preprocess_sv_tets.cpp  test_mat.cpp  test_tet_t.cpp  test_tet_t_vtp.cpp  vis_line_wss.cpp  vis_ns.cpp  vis_p1_wss.cpp  vis_p2_wss.cpp  vis_quad_wss.cpp  vis_tet10_wss.cpp  vis_tet4_wss.cpp  vtu2vtp.cpp
tools/gmsh_fsi_converter/: :wq  CMakeLists.txt  config.yaml  config.yml  gmsh_file_converter.cpp
tools/gmsh_to_vtk/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.yml  gmsh2vtk  gmsh2vtk.cpp  input_gmsh2vtk.yml
tools/stress_recovery/: CMakeLists.txt  driver.cpp  vis_smooth.cpp
tools/sv_fsi_file_converter/: CMakeLists.txt  convert_sv_fsi_files.cpp
(+1621 files in other folders)
